--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-EMAIL_REMITENTE=tu_correo@gmail.com
-EMAIL_PASSWORD=tu_contraseña
+EMAIL_REMITENTE=elboykillerdiamont@gmail.com
+EMAIL_PASSWORD=71897189aA@
 CHROME_DRIVER_PATH=/ruta/al/chromedriver
-DESTINATARIO_INFORME=equipo@empresa.com
+DESTINATARIO_INFORME=rodriguezgrxalbert@gmail.com
